[package]
name = "khel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
bytemuck = { version = "1.16.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.3"
image = { version = "0.25.1", features = ["png", "jpeg"] }
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.20.0"
winit = "0.30.0"

[build-dependencies]
anyhow = "1.0.83"
fs_extra = "1.3.0"
