[package]
name = "khel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
bytemuck = { version = "1.16.0", features = ["derive"] }
cgmath = "0.18.0"
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
env_logger = "0.11.3"
game-loop = { version = "=1.1.0", features = ["winit"] }
image = { version = "0.25.1", features = ["png", "jpeg"] }
log = "0.4.21"
pollster = "0.3.0"
rodio = "0.18.1"
tween = "2.0.3"
wgpu = "0.19.1"
winit = "=0.29.15"

[build-dependencies]
anyhow = "1.0.83"
fs_extra = "1.3.0"
