[package]
name = "khel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
bytemuck = { version = "1.16.0", features = ["derive"] }
cgmath = "0.18.0"
clap = { version = "4.5.7", features = ["derive"] }
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
env_logger = "0.11.3"
fps_ticker = "1.0.0"
game-loop = { version = "=1.1.0", features = ["winit"] }
image = { version = "0.25.1", features = ["png", "jpeg"] }
itertools = "0.13.0"
log = "0.4.21"
pollster = "0.3.0"
rodio = "0.18.1"
thiserror = "1.0.63"
tween = "2.0.3"
wgpu = "0.19.1"
winit = "=0.29.15"

[build-dependencies]
anyhow = "1.0.83"
fs_extra = "1.3.0"
